--- a/windmill-weather/index.html
+++ b/windmill-weather/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./dist/output.css">
   </head>
   <body>
-    <span class="bg-gray-700 text-red-500">Hello</span>
+    <span class="bg-gray-700 text-red-500">Howdy</span>
+    <button class="rounded-full bg-red-800 text-white px-2 mt-4">Click Me!</button>
     <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
