got the open weather api to pull in data then broke something in my config

--- a/windmill-weather/index.html
+++ b/windmill-weather/index.html
@@ -9,7 +9,12 @@
   </head>
   <body>
     <span class="bg-gray-700 text-red-500">Howdy</span>
-    <button class="rounded-full bg-red-800 text-white px-2 mt-4">Click Me!</button>
+    <form class="flex" action="">
+      <label for="searchBar"></label>
+      <input type="text" name="searchBar" id="searchBar">
+      <button id="submitBtn" class="rounded-full bg-red-800 text-white px-2 mt-4 ml-2">Search</button>
+    </form>
+    
     <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
