--- a/windmill-weather/index.html
+++ b/windmill-weather/index.html
@@ -13,6 +13,7 @@
       <label for="searchBar"></label>
       <input type="text" name="searchBar" id="searchBar">
       <button id="submitBtn" class="rounded-full bg-red-800 text-white px-2 mt-4 ml-2">Search</button>
+      <span class="rounded-lg bg-green-600 w-4 h-4"></span>
     </form>
     
     <script type="module" src="./src/main.ts"></script>
