Parcel did the trick :)

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <link rel="stylesheet" href="/index.812b439a.css">
+    <link rel="stylesheet" href="input.css">
   </head>
   <body class="flex-col flex align-middle items-center justify-center">
     <span class="text-orange-500">Windmill Weather</span>
@@ -20,10 +20,7 @@
     <p id="precip"></p>
     <p id="weather"></p>
   </div>
-  <script>var exports = {
-};
-
-</script>
-    <script src="/index.6b815632.js" defer=""></script>
+  <script> var exports = {}; </script>
+    <script type="module" src="app.ts"></script>
   </body>
 </html>
