--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,16 @@
     <button id="location"><img class="w-6 h-6" src="./assets/placeholder.png"
         alt="Location pin. Use to get current locations weather"></button>
     <span class="text-orange-500 font-custom font-bold text-3xl ml-4 mr-4">Windmill Weather</span>
-    <button class="w-6 h-6" id="darkModeToggle"><img id="darkModeIcon" class="w-6 h-6"  src="./assets/moon.png"
-        alt="cute smiling moon. Clicking this changes it to a sun and turns the background to dark mode"></button>
+    <button class="w-6 h-6" id="darkModeToggle"><img id="moonIcon" class="w-6 h-6" src="./assets/moon.png"
+        alt="cute smiling moon. Clicking this changes it to a sun and turns the background to dark mode"><img
+        id="sunIcon" class="hidden w-6 h-6" src="./assets/sun.png"
+        alt="cute smiling sun. Clicking this changes it to a moon and turns the background to light mode"></button>
   </div>
 
   <form class="flex align-middle mt-3 ml-3" action="">
     <label for="searchBar"></label>
-    <input class="h-5 border-neutral-900 dark:border-neutral-50 border-2 rounded-full py-1 px-1" type="text" name="searchBar" id="searchBar">
+    <input class="h-5 border-neutral-900 dark:border-neutral-50 border-2 rounded-full py-1 px-1" type="text"
+      name="searchBar" id="searchBar">
     <button id="submitBtn"
       class="rounded-full bg-orange-500 text-white px-2 ml-2 h-5 text-sm text-center">Search</button>
   </form>
