--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,10 @@
     <button id="location"><img class="w-6 h-6" src="./assets/placeholder.png"
         alt="Location pin. Use to get current locations weather"></button>
     <span class="text-orange-500 font-custom font-bold text-3xl ml-4 mr-4">Windmill Weather</span>
-    <button class="w-6 h-6" id="darkModeToggle"><img id="darkModeIcon" class="w-6 h-6"  src="./assets/moon.png"
-        alt="cute smiling moon. Clicking this changes it to a sun and turns the background to dark mode"></button>
+    <button class="w-6 h-6" id="darkModeToggle"><img id="moonIcon" class="w-6 h-6" src="./assets/moon.png"
+      alt="cute smiling moon. Clicking this changes it to a sun and turns the background to dark mode"><img
+      id="sunIcon" class="hidden w-6 h-6" src="./assets/sun.png"
+      alt="cute smiling sun. Clicking this changes it to a moon and turns the background to light mode"></button>
   </div>
 
   <form class="flex align-middle mt-3 ml-3" action="">
