--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
   <section style="width: 100%;" class="flex">
     <div class="flex flex-col w-2/4 items-center">
       <p class="dark:text-white" id="city"></p>
-      <p class="dark:text-white" id="dateTime">date and time</p>
+      <p class="dark:text-white font-std" id="dateTime">date and time</p>
       <p class="dark:text-white" id="weather"></p>
     </div>
     <div class="flex flex-col w-2/4 items-center">
