Now validating inputs on the search bar

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
 
   <form class="flex align-middle mt-3 ml-3" action="">
     <label for="searchBar"></label>
-    <input class="h-5 w-64 placeholder:text-xs text-xs border-neutral-900 dark:border-neutral-50 border-2 rounded-full py-1 px-1" type="text"
-      name="searchBar" id="searchBar" placeholder="City, State (If in USA), Country Code (US, UK)">
+    <input class="h-5 w-64 text-xs border-neutral-900 dark:border-neutral-50 border-2 rounded-full py-1 px-1" type="text"
+      name="searchBar" id="searchBar" style="font-size: .1rem" placeholder="City, State: MI, FL, CN: US, UK">
     <button id="submitBtn"
       class="rounded-full bg-orange-500 text-white px-2 ml-2 h-5 text-sm text-center">Search</button>
   </form>
