--- a/src/index.html
+++ b/src/index.html
@@ -11,51 +11,59 @@
 
 <body class="min-h-screen m-0 relative bg-neutral-100 dark:bg-slate-800">
   <main class=" flex items-center justify-center flex-col">
-  <div>
-    <button id="location"><img class="w-6 h-6" src="./assets/placeholder.png"
-        alt="Location pin. Use to get current locations weather"></button>
-    <span class="text-orange-500 font-custom font-bold text-3xl ml-4 mr-4">Windmill Weather</span>
-    <button class="w-6 h-6" id="darkModeToggle"><img id="moonIcon" class="w-6 h-6" src="./assets/moon.png"
-        alt="cute smiling moon. Clicking this changes it to a sun and turns the background to dark mode"><img
-        id="sunIcon" class="hidden w-6 h-6" src="./assets/sun.png"
-        alt="cute smiling sun. Clicking this changes it to a moon and turns the background to light mode"></button>
-  </div>
-
-  <form class="flex align-middle mt-3 ml-3" action="">
-    <label for="searchBar"></label>
-    <input class="h-5 w-64 text-xs border-neutral-900 dark:border-neutral-50 border-2 rounded-full py-1 px-1" type="text"
-      name="searchBar" id="searchBar" style="font-size: .1rem" placeholder="City, State: MI, FL, CN: US, UK">
-    <button id="submitBtn"
-      class="rounded-full bg-orange-500 text-white px-2 ml-2 h-5 text-sm text-center">Search</button>
-  </form>
-
-  <section style="width: 100%;" class="flex">
-    <div class="flex flex-col w-2/4 items-center">
-      <p class="dark:text-white" id="city"></p>
-      <p class="dark:text-white font-worksans" id="dateTime">date and time</p>
-      <p class="dark:text-white" id="weather"></p>
+    <div>
+      <button id="location"><img class="w-6 h-6" src="./assets/placeholder.png"
+          alt="Location pin. Use to get current locations weather"></button>
+      <span class="text-orange-500 font-custom font-bold text-3xl ml-4 mr-4">Windmill Weather</span>
+      <button class="w-6 h-6" id="darkModeToggle"><img id="moonIcon" class="w-6 h-6" src="./assets/moon.png"
+          alt="cute smiling moon. Clicking this changes it to a sun and turns the background to dark mode"><img
+          id="sunIcon" class="hidden w-6 h-6" src="./assets/sun.png"
+          alt="cute smiling sun. Clicking this changes it to a moon and turns the background to light mode"></button>
     </div>
-    <div class="flex flex-col w-2/4 items-center">
-      <div>
-        <form action="">
-          <label class="dark:text-white" for="fahrenheit">Imperial</label>
-          <input type="radio" name="temp" id="fahrenheit" value="fahrenheit" checked>
-          <label class="dark:text-white" for="celcius">Metric</label>
-          <input type="radio" name="temp" id="celsius" value="celsius">
-        </form>
+
+    <form class="flex flex-col align-middle mt-3 ml-3" action="">
+      <div class="flex flex-row mb-1">
+        <label for="searchBar"></label>
+        <input class="h-5 w-64 text-xs border-neutral-900 dark:border-neutral-50 border-2 rounded-full py-1 px-1"
+          type="text" name="searchBar" id="searchBar" style="font-size: .1rem"
+          placeholder="City, State: MI, FL, CN: US, UK">
+          <button id="submitBtn"
+          class="rounded-full bg-orange-500 text-white px-2 ml-2 h-5 text-sm text-center">Search</button>
+        </div>
+          <span id="searchAlert" class="text-xs bg-orange-500 rounded-full text-black dark:text-white p-1 hidden">
+            Please format: City, State Code (MI), Country Code (US)
+          </span>
+      
+      
+    </form>
+
+    <section style="width: 100%;" class="flex">
+      <div class="flex flex-col w-2/4 items-center">
+        <p class="dark:text-white" id="city"></p>
+        <p class="dark:text-white font-worksans" id="dateTime">date and time</p>
+        <p class="dark:text-white" id="weather"></p>
       </div>
-      <p class="dark:text-white" id="temperature"></p>
-      <p class="dark:text-white">Icon for the current weather</p>
-    </div>
-  </section>
+      <div class="flex flex-col w-2/4 items-center">
+        <div>
+          <form action="">
+            <label class="dark:text-white" for="fahrenheit">Imperial</label>
+            <input type="radio" name="temp" id="fahrenheit" value="fahrenheit" checked>
+            <label class="dark:text-white" for="celcius">Metric</label>
+            <input type="radio" name="temp" id="celsius" value="celsius">
+          </form>
+        </div>
+        <p class="dark:text-white" id="temperature"></p>
+        <p class="dark:text-white">Icon for the current weather</p>
+      </div>
+    </section>
 
-  <div class="ml-3 mt-2">
-    <p class="dark:text-white" id="wind"></p>
-    <p class="dark:text-white" id="humidity">Humidity 70%</p>
-    <p class="dark:text-white" id="sunrise">Sunrise: 6:00am</p>
-    <p class="dark:text-white" id="sunset">Sunset: 9:00pm</p>
-  </div>
-</main>
+    <div class="ml-3 mt-2">
+      <p class="dark:text-white" id="wind"></p>
+      <p class="dark:text-white" id="humidity">Humidity 70%</p>
+      <p class="dark:text-white" id="sunrise">Sunrise: 6:00am</p>
+      <p class="dark:text-white" id="sunset">Sunset: 9:00pm</p>
+    </div>
+  </main>
   <footer class="absolute left-0 text-center bottom-0 w-full">
     <div>
       <p class="dark:text-white font-serif">Windmill, location pin, moon, and sun icon created by Freepik</p>
