All the values are displaying correctly in the current day sections :)

--- a/src/index.html
+++ b/src/index.html
@@ -59,9 +59,9 @@
 
     <div class="ml-3 mt-2">
       <p class="dark:text-white" id="wind"></p>
-      <p class="dark:text-white" id="humidity">Humidity 70%</p>
-      <p class="dark:text-white" id="sunrise">Sunrise: 6:00am</p>
-      <p class="dark:text-white" id="sunset">Sunset: 9:00pm</p>
+      <p class="dark:text-white" id="humidity"></p>
+      <p class="dark:text-white" id="sunrise"></p>
+      <p class="dark:text-white" id="sunset"></p>
     </div>
   </main>
   <footer class="absolute left-0 text-center bottom-0 w-full">
