--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="font-worksans w-screen h-full">
+<html lang="en" class="font-worksans">
 
 <head>
   <meta charset="UTF-8" />
@@ -53,7 +53,7 @@
           </form>
         </div>
         <p class="dark:text-white" id="temperature"></p>
-        <p class="dark:text-white">Icon for the current weather</p>
+        <div class="text-4xl">☁️</div>
       </div>
     </section>
 
@@ -74,8 +74,13 @@
       </label>
     </div>
      
-    <div class="flex flex-col md:flex-row items-center gap-3 md:justify-around flex-wrap w-full mt-8">
-      <div class="border-4 border-black w-3/4 md:w-1/6 h-80"></div>
+    <div class="flex flex-col md:flex-row items-center gap-2 md:justify-around flex-wrap w-full mb-8 mt-8">
+      <div class="border-4 border-black w-3/4 md:w-1/6 h-80 flex flex-col justify-between items-center">
+        <h2 class="timeOrDay text-xl font-bold">Wednesday</h2>
+        <p class="highTemp text-lg">⬆️  45F</p>
+        <p class=" lowTemp text-lg">⬇️  25F</p>
+        <div class="hourlyDailyWeather text-8xl">☁️</div>
+      </div>
       <div class="border-4 border-black w-3/4 md:w-1/6 h-80"></div>
       <div class="border-4 border-black w-3/4 md:w-1/6 h-80"></div>
       <div class="border-4 border-black w-3/4 md:w-1/6 h-80"></div>
@@ -83,9 +88,9 @@
       </div>
     </div>
   </main>
-  <footer class="absolute left-0 text-center bottom-0 w-full">
+  <footer class="absolute left-0 mt-10 text-center w-full">
     <div>
-      <p class="dark:text-white font-serif">Windmill, location pin, moon, and sun icon created by Freepik</p>
+      <p style="margin-top: 40px;" class="dark:text-white font-serif">Windmill, location pin, moon, and sun icon created by Freepik</p>
     </div>
   </footer>
   <script type="module" src="app.ts"></script>
