--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,8 @@
     <form class="flex flex-col align-middle mt-3 ml-3" action="">
       <div class="flex flex-row mb-1">
         <label for="searchBar"></label>
-        <input class="h-5 w-64 text-xl border-neutral-900 dark:border-neutral-50 border-2 rounded-full py-1 px-1"
-          type="text" name="searchBar" id="searchBar" style="font-size: .1rem"
-          placeholder="City, State: MI, FL, CN: US, UK">
+        <input class="h-5 w-64 text-base border-neutral-900 dark:border-neutral-50 border-2 rounded-full py-1 px-1"
+          type="text" name="searchBar" id="searchBar" placeholder="City, State: MI, FL, CN: US, UK">
         <button id="submitBtn"
           class="rounded-full bg-orange-500 text-white px-2 ml-2 h-5 text-sm text-center">Search</button>
       </div>
