--- a/src/index.html
+++ b/src/index.html
@@ -12,22 +12,22 @@
 <body class="text-black dark:text-white min-h-screen m-0 relative bg-neutral-100 dark:bg-slate-800">
   <main class=" flex items-center justify-center flex-col">
     <div>
-      <button id="location"><img class="w-6 h-6" src="./assets/placeholder.png"
+      <button id="location"><img class="w-6 h-6 md:w-10 md:h-10" src="./assets/placeholder.png"
           alt="Location pin. Use to get current locations weather"></button>
-      <span class="text-orange-500 font-custom font-bold text-3xl ml-4 mr-4">Windmill Weather</span>
-      <button class="w-6 h-6" id="darkModeToggle"><img id="moonIcon" class="w-6 h-6" src="./assets/moon.png"
+      <span class="text-orange-500 font-custom font-bold text-4xl md:text-6xl ml-4 mr-4">Windmill Weather</span>
+      <button class="w-6 h-6 md:w-10 md:h-10" id="darkModeToggle"><img id="moonIcon" class="w-6 h-6 md:w-10 md:h-10" src="./assets/moon.png"
           alt="cute smiling moon. Clicking this changes it to a sun and turns the background to dark mode"><img
-          id="sunIcon" class="hidden w-6 h-6" src="./assets/sun.png"
+          id="sunIcon" class="hidden w-6 h-6 md:w-10 md:h-10" src="./assets/sun.png"
           alt="cute smiling sun. Clicking this changes it to a moon and turns the background to light mode"></button>
     </div>
 
     <form class="flex flex-col align-middle mt-3 ml-3" action="">
       <div class="flex flex-row mb-1">
         <label for="searchBar"></label>
-        <input class="h-5 w-64 text-base border-neutral-900 dark:border-neutral-50 border-2 rounded-full py-1 px-1"
+        <input class="h-5 w-64 md:h-7 md:w-72 text-base border-neutral-900 dark:border-neutral-50 border-2 rounded-full py-1 px-1"
           type="text" name="searchBar" id="searchBar" placeholder="City, State: MI, FL, CN: US, UK">
         <button id="submitBtn"
-          class="rounded-full bg-orange-500 text-white px-2 ml-2 h-5 text-sm text-center">Search</button>
+          class="rounded-full bg-orange-500 text-white px-2 ml-2 h-5 md:h-7 text-sm text-center">Search</button>
       </div>
       <span id="searchAlert" class="text-xs bg-orange-500 rounded-full   p-1 hidden">
         Please format: City, State Code (MI), Country Code (US)
@@ -38,79 +38,80 @@
 
     <section style="width: 100%;" class="flex">
       <div class="flex flex-col w-2/4 items-center">
-        <p class="" id="city"></p>
-        <p class=" font-worksans" id="dateTime"></p>
-        <p class="" id="temperature"></p>
+        <p class="text-xl md:text-3xl lg:text-4xl font-bold" id="city"></p>
+        <p class=" font-worksans text-xl lg:text-2xl" id="dateTime"></p>
+        <p class="text-center mt-3 text-base md:text-lg lg:text-xl lg:relative lg:top-2" id="temperature"></p>
       </div>
       <div class="flex flex-col w-2/4 items-center">
         <div>
-          <form action="">
-            <label class="" for="fahrenheit">Imperial</label>
+          <form class="" action="">
+            <p class="mt-1 md:text-lg lg:text-xl text-center font-semibold">Unit Conversion</p>
+            <label class="md:text-lg lg:text-xl" for="fahrenheit">Imperial</label>
             <input type="radio" name="temp" id="fahrenheit" value="fahrenheit" checked>
-            <label class="" for="celcius">Metric</label>
+            <label class="md:text-lg lg:text-xl" for="celcius">Metric</label>
             <input type="radio" name="temp" id="celsius" value="celsius">
           </form>
         </div>
-        <p class="" id="weather"></p>
-        <div id="currentWeatherIcon" class="text-4xl"></div>
+        <p class="mt-4 text-base md:text-lg lg:text-xl lg:relative lg:top-4" id="weather"></p>
+        <div id="currentWeatherIcon" class="text-4xl lg:relative lg:top-4"></div>
       </div>
     </section>
 
     <div class="ml-3 mt-2">
-      <p class="" id="wind"></p>
-      <p class="" id="humidity"></p>
-      <p class="" id="sunrise"></p>
-      <p class="" id="sunset"></p>
+      <p class="text-lg md:text-xl lg:text-2xl" id="wind"></p>
+      <p class="text-lg md:text-xl lg:text-2xl" id="humidity"></p>
+      <p class="text-lg md:text-xl lg:text-2xl" id="sunrise"></p>
+      <p class="text-lg md:text-xl lg:text-2xl" id="sunset"></p>
     </div>
     <div class="flex justify-center mt-8">
       <label class="relative flex justify-between items-center group p-2 text-xl">
-        <p class="">Hourly</p>
+        <p class="font-bold">Hourly</p>
         <input type="checkbox" id="hourlyDailyToggle"
           class="absolute left-1/2 -translate-x-1/2 w-full h-full peer appearance-none rounded-md" />
         <span
           class="w-16 h-10 flex items-center flex-shrink-0 ml-4 p-1 bg-orange-500 rounded-full duration-300 ease-in-out peer-checked:bg-blue-500 after:w-8 after:h-8 after:bg-white after:rounded-full after:shadow-md after:duration-300 peer-checked:after:translate-x-6 group-hover:after:translate-x-1"></span>
-        <p class="ml-4 ">Daily</p>
+        <p class="ml-4 font-bold">Daily</p>
       </label>
     </div>
 
     <div class="flex flex-col md:flex-row items-center gap-2 md:justify-around flex-wrap w-full mb-8 mt-8">
       <div class="border-2 rounded-xl border-black w-3/4 md:w-1/6 h-80 flex flex-col justify-between items-center">
-        <h2 class=" timeOrDay mt-2 text-xl font-bold"></h2>
-        <p class=" highTemp text-lg"></p>
+        <h2 class=" timeOrDay mt-2 text-3xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
+        <p class=" highTemp text-xl"></p>
         <p class=" hidden lowTemp text-lg"></p>
         <div class="hourlyDailyWeather text-8xl"></div>
       </div>
 
       <div class="border-2 rounded-xl border-black w-3/4 md:w-1/6 h-80 flex flex-col justify-between items-center">
-        <h2 class=" timeOrDay mt-2 text-xl font-bold"></h2>
-        <p class=" highTemp text-lg"></p>
+        <h2 class=" timeOrDay mt-2 text-3xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
+        <p class=" highTemp text-xl"></p>
         <p class=" hidden lowTemp text-lg"></p>
         <div class="hourlyDailyWeather text-8xl"></div>
       </div>
 
       <div class="border-2 rounded-xl border-black w-3/4 md:w-1/6 h-80 flex flex-col justify-between items-center">
-        <h2 class=" timeOrDay mt-2 text-xl font-bold"></h2>
-        <p class=" highTemp text-lg"></p>
+        <h2 class=" timeOrDay mt-2 text-3xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
+        <p class=" highTemp text-xl"></p>
         <p class=" hidden lowTemp text-lg"></p>
         <div class="hourlyDailyWeather text-8xl"></div>
       </div>
 
       <div class="border-2 rounded-xl border-black w-3/4 md:w-1/6 h-80 flex flex-col justify-between items-center">
-        <h2 class=" timeOrDay mt-2 text-xl font-bold"></h2>
-        <p class=" highTemp text-lg"></p>
+        <h2 class=" timeOrDay mt-2 text-3xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
+        <p class=" highTemp text-xl"></p>
         <p class=" hidden lowTemp text-lg"></p>
         <div class="hourlyDailyWeather text-8xl"></div>
       </div>
 
       <div class="border-2 rounded-xl border-black w-3/4 md:w-1/6 h-80 flex flex-col justify-between items-center">
-        <h2 class="timeOrDay mt-2 text-xl font-bold"></h2>
-        <p class="highTemp text-lg"></p>
-        <p class="hidden lowTemp text-lg"></p>
+        <h2 class=" timeOrDay mt-2 text-3xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
+        <p class=" highTemp text-xl"></p>
+        <p class=" hidden lowTemp text-lg"></p>
         <div class="hourlyDailyWeather text-8xl"></div>
       </div>
     </div>
   </main>
-  <footer class="absolute left-0 mt-10 text-center w-full">
+  <footer class="absolute bottom-0 left-0 text-center w-full">
     <div>
       <p style="margin-top: 40px;" class=" font-serif">Windmill, location pin, moon, and sun icon created by Freepik</p>
     </div>
