--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
   </main>
   <footer class="absolute bottom-0 left-0 text-center w-full">
     <div>
-      <p style="margin-top: 40px;" class=" font-serif">Windmill, location pin, moon, and sun icon created by Freepik</p>
+      <p style="" class="relative top-16 font-serif">Windmill, location pin, moon, and sun icon created by Freepik</p>
     </div>
   </footer>
   <script type="module" src="app.ts"></script>
