Added a search bar with auto complete

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Windmill Weather</title>
   <link rel="shortcut icon" href="./assets/windmill.png" type="image/x-icon">
   <link rel="stylesheet" href="input.css">
+  <link rel="stylesheet" href="../node_modules/@tomtom-international/web-sdk-plugin-searchbox/dist/SearchBox.css">
 </head>
 
 <body class="text-black dark:text-white min-h-screen m-0 relative bg-neutral-100 dark:bg-slate-800">
@@ -22,17 +23,18 @@
     </div>
 
     <form class="flex flex-col align-middle mt-3 ml-3" action="">
-      <div class="flex flex-row mb-1">
+      <div id="searchContainer" class="flex flex-row mb-1">
+       <!--
         <label for="searchBar"></label>
         <input class="h-5 w-64 md:h-7 md:w-72 text-xs sm:text-sm md:text-base lg:text-lg placeholder:text-xs sm:placeholder:text-sm md:placeholder:text-base lg:placeholder:text-lg border-neutral-900 dark:border-neutral-50 border-2 rounded-full py-1 px-1"
           type="text" name="searchBar" id="searchBar" placeholder="City, State: MI, FL, CN: US, UK">
         <button id="submitBtn"
           class="rounded-full bg-orange-500 text-white px-2 ml-2 h-5 md:h-7 text-sm text-center">Search</button>
-      </div>
+        </div>
       <span id="searchAlert" class="text-xs bg-orange-500 rounded-full   p-1 hidden">
         Please format: City, State Code (MI), Country Code (US)
       </span>
-
+    -->
 
     </form>
 
