Got the search working correctly

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
           alt="cute smiling sun. Clicking this changes it to a moon and turns the background to light mode"></button>
     </div>
 
-    <form class="flex flex-col align-middle mt-3 ml-3" action="">
-      <div id="searchContainer" class="flex flex-row mb-1">
+    <form class="flex flex-col align-middle" action="">
+      <div id="searchContainer" class="">
        <!--
         <label for="searchBar"></label>
         <input class="h-5 w-64 md:h-7 md:w-72 text-xs sm:text-sm md:text-base lg:text-lg placeholder:text-xs sm:placeholder:text-sm md:placeholder:text-base lg:placeholder:text-lg border-neutral-900 dark:border-neutral-50 border-2 rounded-full py-1 px-1"
