--- a/src/index.html
+++ b/src/index.html
@@ -68,48 +68,79 @@
 
     <div class="flex flex-col items-center gap-2 md:justify-around flex-wrap w-full mb-8 mt-8">
 
-
-      <div class="flex flex-row">
-        <div class="hourlyDailyWeather text-6xl"></div>
-        <h2 class=" timeOrDay mt-2 text-3xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
-        <div class="flex flex-row">
-          <div class="bg-blue-500 w-2/5 p-1 text-center">
+      <div class="grid grid-rows-1 grid-cols-3 items-center">
+        <div class="hourlyDailyWeather text-4xl text-right relative right-2"></div>
+        <div>
+          <h2 class=" timeOrDay text-xl sm:text-xl lg:text-2xl xl:text-3xl font-bold text-center"></h2>
+        </div>
+        <div class="flex flex-row relative left-2">
+          <div class="bg-blue-500 w-fit text-center h-fit">
             <p class="hidden lowTemp text-lg"></p>
           </div>
-          <div class="bg-orange-500 text-right" style="width: 26%;">
+          <div class="bg-orange-500 text-right h-fit w-full" style="width: 26%;">
             <p class=" highTemp text-xl text-right"></p>
           </div>
-
         </div>
-
       </div>
 
-      <div class="border-2 rounded-xl border-black w-3/4 md:w-1/6 h-80 flex flex-col justify-between items-center">
-        <h2 class=" timeOrDay mt-2 text-3xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
-        <p class=" highTemp text-xl"></p>
-        <p class=" hidden lowTemp text-lg"></p>
-        <div class="hourlyDailyWeather text-8xl"></div>
+      <div class="grid grid-rows-1 grid-cols-3 items-center">
+        <div class="hourlyDailyWeather text-4xl text-right relative right-2"></div>
+        <div>
+          <h2 class=" timeOrDay text-xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
+        </div>
+        <div class="flex flex-row relative left-2">
+          <div class="bg-blue-500 w-fit text-center h-fit">
+            <p class="hidden lowTemp text-lg"></p>
+          </div>
+          <div class="bg-orange-500 text-right h-fit w-full" style="width: 26%;">
+            <p class=" highTemp text-xl text-right"></p>
+          </div>
+        </div>
       </div>
 
-      <div class="border-2 rounded-xl border-black w-3/4 md:w-1/6 h-80 flex flex-col justify-between items-center">
-        <h2 class=" timeOrDay mt-2 text-3xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
-        <p class=" highTemp text-xl"></p>
-        <p class=" hidden lowTemp text-lg"></p>
-        <div class="hourlyDailyWeather text-8xl"></div>
+      <div class="grid grid-rows-1 grid-cols-3 items-center">
+        <div class="hourlyDailyWeather text-4xl text-right relative right-2"></div>
+        <div>
+          <h2 class=" timeOrDay text-xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
+        </div>
+        <div class="flex flex-row relative left-2">
+          <div class="bg-blue-500 w-fit text-center h-fit">
+            <p class="hidden lowTemp text-lg"></p>
+          </div>
+          <div class="bg-orange-500 text-right h-fit w-full" style="width: 26%;">
+            <p class=" highTemp text-xl text-right"></p>
+          </div>
+        </div>
       </div>
 
-      <div class="border-2 rounded-xl border-black w-3/4 md:w-1/6 h-80 flex flex-col justify-between items-center">
-        <h2 class=" timeOrDay mt-2 text-3xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
-        <p class=" highTemp text-xl"></p>
-        <p class=" hidden lowTemp text-lg"></p>
-        <div class="hourlyDailyWeather text-8xl"></div>
+      <div class="grid grid-rows-1 grid-cols-3 items-center">
+        <div class="hourlyDailyWeather text-4xl text-right relative right-2"></div>
+        <div>
+          <h2 class=" timeOrDay text-xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
+        </div>
+        <div class="flex flex-row relative left-2">
+          <div class="bg-blue-500 w-fit text-center h-fit">
+            <p class="hidden lowTemp text-lg"></p>
+          </div>
+          <div class="bg-orange-500 text-right h-fit w-full" style="width: 26%;">
+            <p class=" highTemp text-xl text-right"></p>
+          </div>
+        </div>
       </div>
 
-      <div class="border-2 rounded-xl border-black w-3/4 md:w-1/6 h-80 flex flex-col justify-between items-center">
-        <h2 class=" timeOrDay mt-2 text-3xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
-        <p class=" highTemp text-xl"></p>
-        <p class=" hidden lowTemp text-lg"></p>
-        <div class="hourlyDailyWeather text-8xl"></div>
+      <div class="grid grid-rows-1 grid-cols-3 items-center">
+        <div class="hourlyDailyWeather text-4xl text-right relative right-2"></div>
+        <div>
+          <h2 class=" timeOrDay text-xl sm:text-xl lg:text-2xl xl:text-3xl font-bold"></h2>
+        </div>
+        <div class="flex flex-row relative left-2">
+          <div class="bg-blue-500 w-fit text-center h-fit">
+            <p class="hidden lowTemp text-lg"></p>
+          </div>
+          <div class="bg-orange-500 text-right h-fit w-full" style="width: 26%;">
+            <p class=" highTemp text-xl text-right"></p>
+          </div>
+        </div>
       </div>
     </div>
   </main>
