Made temp text bold and changed background image

--- a/src/index.html
+++ b/src/index.html
@@ -103,64 +103,64 @@
       <div class="flex flex-col gap-2">
         <div class="flex flex-row relative left-2 leading-9 h-11">
           <div class="bg-blue-500 w-fit text-center h-fit">
-            <p class="hidden lowTemp text-lg"></p>
+            <p class="hidden font-semibold lowTemp text-lg"></p>
           </div>
           <div class="bg-orange-500 text-right h-fit">
-            <p class=" highTemp text-xl text-right"></p>
+            <p class=" highTemp font-semibold text-xl text-right"></p>
           </div>
         </div>
 
         <div class="flex flex-row relative left-2 h-11">
           <div class="bg-blue-500 w-fit text-center h-fit">
-            <p class="hidden lowTemp text-lg"></p>
+            <p class="hidden font-semibold lowTemp text-lg"></p>
           </div>
           <div class="bg-orange-500 text-right h-fit">
-            <p class=" highTemp text-xl text-right"></p>
+            <p class=" highTemp font-semibold text-xl text-right"></p>
           </div>
         </div>
 
         <div class="flex flex-row relative left-2 h-11">
           <div class="bg-blue-500 w-fit text-center h-fit">
-            <p class="hidden lowTemp text-lg"></p>
+            <p class="hidden font-semibold lowTemp text-lg"></p>
           </div>
           <div class="bg-orange-500 text-right h-fit">
-            <p class=" highTemp text-xl text-right"></p>
+            <p class=" highTemp font-semibold text-xl text-right"></p>
           </div>
         </div>
 
         <div class="flex flex-row relative left-2 h-11">
           <div class="bg-blue-500 w-fit text-center h-fit">
-            <p class="hidden lowTemp text-lg"></p>
+            <p class="hidden font-semibold lowTemp text-lg"></p>
           </div>
           <div class="bg-orange-500 text-right h-fit">
-            <p class=" highTemp text-xl text-right"></p>
+            <p class=" highTemp font-semibold text-xl text-right"></p>
           </div>
         </div>
 
         <div class="flex flex-row relative left-2 h-11">
           <div class="bg-blue-500 w-fit text-center h-fit">
-            <p class="hidden lowTemp text-lg"></p>
+            <p class="hidden font-semibold lowTemp text-lg"></p>
           </div>
           <div class="bg-orange-500 text-right h-fit">
-            <p class=" highTemp text-xl text-right"></p>
+            <p class=" highTemp font-semibold text-xl text-right"></p>
           </div>
         </div>
 
         <div class="flex flex-row relative left-2 h-11">
           <div class="bg-blue-500 w-fit text-center h-fit">
-            <p class="hidden lowTemp text-lg"></p>
+            <p class="hidden font-semibold lowTemp text-lg"></p>
           </div>
           <div class="bg-orange-500 text-right h-fit">
-            <p class=" highTemp text-xl text-right"></p>
+            <p class=" highTemp font-semibold text-xl text-right"></p>
           </div>
         </div>
 
         <div class="flex flex-row relative left-2 h-11">
           <div class="bg-blue-500 w-fit text-center h-fit">
-            <p class="hidden lowTemp text-lg"></p>
+            <p class="hidden font-semibold lowTemp text-lg"></p>
           </div>
           <div class="bg-orange-500 text-right h-fit">
-            <p class=" highTemp text-xl text-right"></p>
+            <p class=" highTemp font-semibold text-xl text-right"></p>
           </div>
         </div>
 
